# ASS-ADE

./: .env.example  .gitignore  .mcp.json.example  0_README.md  1_QUICKSTART.md  2_ARCHITECTURE.md  3_USER_GUIDE.md  4_FEATURES.md  5_CONTRIBUTING.md  AGENTS.md  ARCHITECTURE.md  ASS_ADE_GOAL_PIPELINE.md  ASS_ADE_MATRIX.md  ASS_ADE_SHIP_PLAN.md  ATOMADIC_CHAT_DEPLOY.md  ATOMADIC_THOUGHTS.json  ATOMADIC_THOUGHTS_READABLE.md  ATOMADIC_TODO_BREAKTHROUGHS.md  AUDIT_AND_PLAN.md  AUDIT_AND_PLAN_v2.md  BIRTH_CERTIFICATE.md  BRAIN_FIX_REPORT.md  CERTIFICATE.json  CHANGELOG.md  CHEATSHEET.md  CHERRY_PICKING_SHOPPING_LIST.md  CLAUDE.md  CLAUDE.md.example  CLI_STRESS_TEST.md  COGNITION_DEPLOYMENT_FINAL.md  COGNITION_DEPLOYMENT_STATUS.md  CONTEXT_LOADER_WIRING_SPECIALIST.agent  CONTEXT_LOADER_WIRING_SPECIALIST.agent.md  CONTEXT_LOADER_WIRING_SPECIALIST.instructions.md  CONTEXT_LOADER_WIRING_SPECIALIST.prompt.md  CONTEXT_LOADER_WIRING_SPECIALIST_HEARTIFACTS.prompt.md  CONTRIBUTING.md  DEPLOYMENT_READY.txt  DEPLOY_STATUS.md  DESIGN_NOTES.md  (+61 more)
.ass-ade/.ass-ade/selfbuild/20260419_164104/: CERTIFICATE.json  MANIFEST.json  VERSION  __init__.py  pyproject.toml
.ass-ade/.ass-ade/selfbuild/20260419_164104/a0_qk_constants/: VERSION.json  __init__.py  qk_draft_agent_token_budget.json  qk_draft_available.json  qk_draft_build_proof_headers.json  qk_draft_context_window_for.json  qk_draft_emit_certificate.json  qk_draft_estimate_conversation.json  qk_draft_estimate_message_tokens.json  qk_draft_estimate_tokens.json  qk_draft_estimate_tools_tokens.json  qk_draft_estimated_tokens.json  qk_draft_fairnessproof.json  qk_draft_federationtoken.json  qk_draft_for_model.json  qk_draft_get_mcp_manifest.json  qk_draft_get_pricing_manifest.json  qk_draft_get_proof.json  qk_draft_inference_token_count.json  qk_draft_lean4spec.json  qk_draft_lineageproof.json  qk_draft_materialize_plan.json  qk_draft_mcpmanifest.json  qk_draft_messages_to_evict.json  qk_draft_nexus_mcp_manifest.json  qk_draft_paymentproof.json  qk_draft_pricingmanifest.json  qk_draft_proofbridge.json  qk_draft_report.json  qk_draft_run.json  qk_draft_schemas.json  qk_draft_swarm_token_budget.json  qk_draft_token_budget.json  qk_draft_toolschema.json  qk_draft_translate.json  qk_draft_update_from_usage.json  qk_draft_utilization.json  qk_draft_validate_rebuild.json  schema_materializer.py  schema_materializer_1.py
.ass-ade/.ass-ade/selfbuild/20260419_164104/a1_at_functions/: VERSION.json  __init__.py  at_draft_a2a_discover.json  at_draft_a2a_local_card.json  at_draft_a2a_negotiate.json  at_draft_a2a_validate.json  at_draft_active_terrain_gate.json  at_draft_add.json  at_draft_add_assistant.json  at_draft_add_create.json  at_draft_add_delete.json  at_draft_add_modify.json  at_draft_add_tool_result.json  at_draft_add_user.json  at_draft_advance.json  at_draft_aegis_certify_epoch.json  at_draft_aegis_epistemic_route.json  at_draft_agent_chat.json  at_draft_agent_run.json  at_draft_alert.json  at_draft_append_history.json  at_draft_apply.json  at_draft_atomadic.json  at_draft_avg_complexity.json  at_draft_backup_file.json  at_draft_bitnet_benchmark.json  at_draft_bitnet_chat.json  at_draft_bitnet_models.json  at_draft_bitnet_status.json  at_draft_bitnet_stream.json  at_draft_budget.json  at_draft_build_assessment.json  at_draft_build_atomadic_intent_prompt.json  at_draft_build_audit.json  at_draft_build_blueprint.json  at_draft_build_capability_inventory.json  at_draft_build_capability_snapshot.json  at_draft_build_context_packet.json  at_draft_build_enhancement_report.json  at_draft_build_local_certificate.json  (+410 more)
.ass-ade/.ass-ade/selfbuild/20260419_164104/a2_mo_composites/: VERSION.json  __init__.py  alphaverus.py  cycle_detector.py  edee.py  feature.py  gates.py  mo_draft_a2aagentcard.json  mo_draft_a2aauthentication.json  mo_draft_a2acapabilities.json  mo_draft_a2aprovider.json  mo_draft_a2askill.json  mo_draft_activeterrainverdict.json  mo_draft_aegis_certify_epoch.json  mo_draft_aegis_epistemic_route.json  mo_draft_aegis_mcp_proxy.json  mo_draft_aegisproxyresult.json  mo_draft_agent.json  mo_draft_agent_capabilities_match.json  mo_draft_agent_contradiction.json  mo_draft_agent_intent_classify.json  mo_draft_agent_plan.json  mo_draft_agent_quarantine.json  mo_draft_agent_register.json  mo_draft_agent_reputation.json  mo_draft_agent_semantic_diff.json  mo_draft_agent_topology.json  mo_draft_agentcard.json  mo_draft_agentloop.json  mo_draft_agentref.json  mo_draft_agentregistration.json  mo_draft_agentskill.json  mo_draft_aibom_drift.json  mo_draft_aibomdriftresult.json  mo_draft_alert.json  mo_draft_alphaverus.json  mo_draft_anthropicprovider.json  mo_draft_arch.json  mo_draft_assadeconfig.json  mo_draft_assess_blueprint_fulfillment.json  (+444 more)
.ass-ade/.ass-ade/selfbuild/20260419_164104/a3_og_features/: VERSION.json  __init__.py  og_draft_agentregistry.json  og_draft_certify_output.json  og_draft_certifyresult.json  og_draft_default_registry.json  og_draft_discovery_registry.json  og_draft_execute.json  og_draft_get.json  og_draft_list_tools.json  og_draft_propose.json  og_draft_register.json  og_draft_safe_execute.json  og_draft_safeexecuteresult.json  og_draft_toolregistry.json  og_draft_trust_gate.json  og_draft_trustgateresult.json  og_draft_trustgatestep.json  og_draft_workflow_certify.json  og_draft_workflow_map_terrain.json  og_draft_workflow_phase0_recon.json  og_draft_workflow_safe_execute.json  og_draft_workflow_trust_gate.json  registry.py  workflow.py
tests/fixtures/rebuilt-out/: .gitignore  1_QUICKSTART.md  3_USER_GUIDE.md  API_INVENTORY.md  BIRTH_CERTIFICATE.md  CERTIFICATE.json  MULTILANG_BRIDGES.md  REBUILD_REPORT.md  TEST_COVERAGE.md  __init__.py  pyproject.toml
tests/fixtures/rebuilt-out/a1_at_functions/: a1_compile_python_compile.py  a1_minimal_pkg_invariant_metadata.py  a1_minimal_pkg_pure_helper.json  a1_minimal_pkg_pure_helper.py
tests/fixtures/rebuilt-out/a2_mo_composites/: VERSION.json  test_a2_compile_python_compile.py
tests/fixtures/rebuilt-out/bridges/rust/: Cargo.toml
tests/fixtures/rebuilt-out/example_pkg/: __init__.py
(+7060 files in other folders)
