# Atomadic monorepo — ASS-ADE spine (T12) + uv workspace for sibling packages.
# Install the monadic CLI: `pip install -e ".[dev]"` from this directory.
# Legacy: `ass-ade-v1.1/pyproject.toml` was merged here; do not add a second [project] under ass-ade-v1.1.
#
# uv workspace: https://docs.astral.sh/uv/concepts/projects/workspaces/

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ass_ade_v11" = [
    "_bundled_ade_specs/*.json",
    "ade/cross_ide_bundled/*.md",
    "ade/cross_ide_bundled/*.json",
    "ade/cursor_hooks_bundled/*",
    "ade/SWARM-ONE-PROMPT.vendor.md",
]

[project]
name = "ass-ade-v1-1"
version = "1.1.0a3"
description = "ASS-ADE — monadic spine (`ass-ade-unified`, `book`, `assimilate`) plus the `atomadic` rebuild engine (`ass_ade`) in one install from the workspace root."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "rich>=14,<15",
    "typer>=0.15,<1",
    "python-dotenv>=1.0",
    "click>=8.1",
    "pydantic>=2.6",
    "pyyaml>=6,<7",
    "httpx>=0.28.1",
    "cryptography>=42.0",
    "x402[evm,httpx]>=2.8",
]

[project.scripts]
ass-ade-v11 = "ass_ade_v11.a4_sy_orchestration.cli:main"
ass-ade-unified = "ass_ade_v11.a4_sy_orchestration.unified_cli:main"
atomadic = "ass_ade.cli.__main__:main"
ass-ade = "ass_ade.cli.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0,<8",
    "hypothesis>=6.100",
    "import-linter>=2.0,<3",
    "pyyaml>=6,<7",
    "jsonschema>=4,<5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
# Local LoRA on `training_data/*.jsonl` from `scripts/collect_ass_ade_dev_corpus.py` (GPU recommended).
lora = [
    "accelerate>=0.26,<1",
    "datasets>=2.16,<4",
    "peft>=0.11,<0.18",
    "torch>=2.1,<3",
    "transformers>=4.38,<5",
]

[tool.setuptools.packages.find]
where = ["ass-ade-v1.1/src", "atomadic-engine/src"]

[tool.importlinter]
root_package = "ass_ade_v11"

[[tool.importlinter.contracts]]
name = "Monadic tiers (ASS-ADE v1.1)"
type = "layers"
layers = [
    "ass_ade_v11.a4_sy_orchestration",
    "ass_ade_v11.a3_og_features",
    "ass_ade_v11.a2_mo_composites",
    "ass_ade_v11.a1_at_functions",
    "ass_ade_v11.a0_qk_constants",
    "ass_ade_v11.ade",
]

[tool.pytest.ini_options]
markers = [
    "phase0_recon: Phase 0 terrain / recon gate",
    "phase1_ingest: Phase 1 source ingest + symbol classification",
    "phase2_gapfill: Phase 2 gap-fill plan from ingestions",
    "phase3_enrich: Phase 3 enrich / body attachment",
    "rebuild_v11: Full rebuild book through package",
    "cli: Typer CLI integration",
    "usecase: Operator journeys (doctor, assimilate, policy, plan artifacts); run ``pytest -m usecase``",
    "dogfood: Self-rebuild / long-running dogfood checks",
    "generated_smoke: Parametrized import tests from synth-tests manifest",
]
testpaths = ["ass-ade-v1.1/tests", "atomadic-engine/tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ass-ade-v1.1/src/ass_ade_v11", "atomadic-engine/src/ass_ade"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.uv.workspace]
members = [
    "!atomadic-sdk",
    "!atomadic-uep",
    "!uep_ide",
    "!atomadic-ecosystem",
]

[tool.uv.sources]
ass-ade = { path = "../!aaaa-nexus/!ass-ade", editable = true }
atomadic-sdk = { workspace = true }
atomadic-uep-engines = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".claude/worktrees",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
