# ASS-ADE Seed — one package, one source root.
# pip install -e ".[dev]"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ass_ade" = [
    "README.md",
    "prompts/*.md",
    "_bundled_ade_specs/*.json",
    "ade/cross_ide_bundled/*.md",
    "ade/cross_ide_bundled/*.json",
    "ade/cursor_hooks_bundled/*",
    "ade/SWARM-ONE-PROMPT.vendor.md",
]

[project]
name = "ass-ade"
version = "1.0.2"
description = "ASS-ADE — Atomadic Development Environment. One CLI, monadic architecture, self-rebuilding engine."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "rich>=14,<15",
    "typer>=0.15,<1",
    "python-dotenv>=1.0",
    "click>=8.1",
    "pydantic>=2.6",
    "pyyaml>=6,<7",
    "httpx>=0.28.1",
    "cryptography>=42.0",
    "x402[evm,httpx]>=2.8",
]

[project.scripts]
ass-ade = "ass_ade.a4_sy_orchestration.unified_cli:main"
atomadic = "ass_ade.a4_sy_orchestration.unified_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0,<7",
    "hypothesis>=6.100",
    "import-linter>=2.0,<3",
    "pyyaml>=6,<7",
    "jsonschema>=4,<5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
discord = [
    "discord.py>=2.3,<3",
]
lora = [
    "accelerate>=0.26,<1",
    "datasets>=2.16,<4",
    "peft>=0.11,<0.18",
    "torch>=2.1,<3",
    "transformers>=4.38,<5",
]
ui = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.30,<1",
]
voice = [
    "edge-tts>=6.1,<7",
    "SpeechRecognition>=3.10,<4",
    "pyaudio>=0.2.14,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.importlinter]
root_package = "ass_ade"

[[tool.importlinter.contracts]]
name = "Monadic tiers (ASS-ADE)"
type = "layers"
layers = [
    "ass_ade.a4_sy_orchestration",
    "ass_ade.a3_og_features",
    "ass_ade.a2_mo_composites",
    "ass_ade.a1_at_functions",
    "ass_ade.a0_qk_constants",
    "ass_ade.ade",
]

[tool.pytest.ini_options]
addopts = "--basetemp=../.ass-ade-pytest-basetemp --import-mode=importlib"
norecursedirs = ["fixtures"]
markers = [
    "phase0_recon: Phase 0 terrain / recon gate",
    "phase1_ingest: Phase 1 source ingest + symbol classification",
    "phase2_gapfill: Phase 2 gap-fill plan from ingestions",
    "phase3_enrich: Phase 3 enrich / body attachment",
    "rebuild_v11: Full rebuild book through package",
    "cli: Typer CLI integration",
    "usecase: Operator journeys (doctor, assimilate, policy, plan artifacts)",
    "dogfood: Self-rebuild / long-running dogfood checks",
    "generated_smoke: Parametrized import tests from synth-tests manifest",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/ass_ade"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
